<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/client_bottom_nav_accueil"
        android:title="@string/acceuil"
        android:icon="@drawable/ic_home"
        android:checked="true"
        android:iconTint="@color/black" />

    <item
        android:id="@+id/client_bottom_nav_marchands"
        android:title="@string/marchands"
        android:icon="@drawable/ic_people"
        android:iconTint="@color/black"/>

    <item
        android:id="@+id/client_bottom_nav_discussion"
        android:title="@string/discussion"
        android:icon="@drawable/ic_chat"
        android:iconTint="@color/black"/>

    <item
        android:id="@+id/client_bottom_nav_carnet"
        android:title="@string/mon_carnet"
        android:icon="@drawable/ic_carnet"
        android:iconTint="@color/black"/>


</menu>