<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context=".activity.Connexion">

    <View
        android:id="@+id/vHalfCircle"
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/half_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vSmallCircle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/small_cicle"
        app:layout_constraintBottom_toBottomOf="@id/vHalfCircle"
        app:layout_constraintEnd_toStartOf="@id/vHalfCircle"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/connexion"
        android:textColor="@color/text_black"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="@id/vHalfCircle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="32dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="18dp">

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="15sp"
                android:textColor="@color/red_active"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:text="@string/username"
                android:textColor="@color/text_black"
                app:layout_constraintTop_toBottomOf="@id/error" />

            <EditText
                android:id="@+id/etTelephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:typeface="monospace"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="15dp"
                app:layout_constraintTop_toBottomOf="@id/tvUsername"
                android:drawableLeft="@drawable/ic_phone"
                tools:ignore="TextFields"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/errorUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text=""
                android:textColor="@color/rougeFade"
                app:layout_constraintTop_toBottomOf="@id/etTelephone" />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:textColor="@color/text_black"
                android:textSize="18sp"
                android:text="@string/mot_de_passe"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/errorUsername" />




            <com.scottyab.showhidepasswordedittext.ShowHidePasswordEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPassword"
                android:drawableStart="@drawable/lock_icon"
                android:drawablePadding="15dp"
                app:drawable_show="@drawable/ic_visibility_on"
                app:drawable_hide="@drawable/ic_visibility_off"
                app:tint_color="@color/input_border"
                android:hint="@string/mot_de_passe"
                android:inputType="textPassword"
                android:maxLines="1"
                android:drawableLeft="@drawable/lock_icon" />

            <TextView
                android:id="@+id/errorPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text=""
                android:textColor="@color/rougeFade"
                app:layout_constraintTop_toBottomOf="@id/etPassword" />

            <TextView
                android:id="@+id/tvIForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/oublie"
                android:textColor="@color/black_background"
                android:textSize="14sp"
                android:onClick="forgotPassword"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/errorPassword"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="8dp" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/vVerticalLine"
        android:layout_width="5dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:background="@color/black_background"
        app:layout_constraintBottom_toBottomOf="@id/cardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cardView"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/validate_form"
        android:layout_width="match_parent"
        android:layout_marginStart="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/half_blue_roundshape"
        android:text="@string/se_connecter"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        android:onClick="valider"
        android:layout_marginLeft="100dp" />

    <!--View
        android:layout_width="50dp"
        android:layout_height="100dp"
        android:background="@drawable/half_circle_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16sp"/-->

</androidx.constraintlayout.widget.ConstraintLayout>