<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.marchand.Accueil"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                app:cardCornerRadius="8dp"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/add_root">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/nom_prenom_marchand"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/TextAppearance.AppCompat"
                                android:textStyle="bold"
                                android:textSize="15sp"
                                android:textColor="@color/black_background"/>

                            <TextView
                                android:id="@+id/matricule_marchand"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                style="@style/TextAppearance.AppCompat"
                                android:textStyle="bold"
                                android:textSize="14sp"
                                android:textColor="@color/black_background"/>

                        </LinearLayout>

                        <ImageView
                            android:id="@+id/add"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/small_cicle"
                            android:src="@drawable/ic_add_"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true" />

                    </RelativeLayout>

                    <androidx.legacy.widget.Space
                        android:layout_width="match_parent"
                        android:layout_height="50dp" />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/balance"
                            style="@style/TextAppearance.AppCompat"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="@color/black_background"/>



                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/compte_de_commission"
                            style="@style/TextAppearance.AppCompat"
                            android:layout_alignParentEnd="true"
                            android:textStyle="bold"
                            android:textSize="14sp"
                            android:textColor="@color/black_background"
                            android:layout_alignParentRight="true" />


                    </RelativeLayout>





                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">



                        <TextView
                            android:id="@+id/credit_virtuelle_actuel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/solde"
                            style="@style/TextAppearance.AppCompat"
                            android:textStyle="bold"
                            android:textSize="13sp"
                            android:textColor="@color/black_background"/>



                        <TextView
                            android:id="@+id/solde_commisssions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/solde"
                            style="@style/TextAppearance.AppCompat"
                            android:textStyle="bold"
                            android:textSize="13sp"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:textColor="@color/black_background"/>



                    </RelativeLayout>



                    <!--SeekBar
                        android:id="@+id/simpleSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="20sp"
                        android:max="100"
                        style="@style/SeekBar"/-->


                </LinearLayout>

            </androidx.cardview.widget.CardView>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">



                <androidx.legacy.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp">




                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        style="@style/TextAppearance.AppCompat"
                        android:text="@string/transactions"
                        android:textColor="@color/black_background"/>



                    <TextView
                        android:id="@+id/view_historique"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:text="@string/historique"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:drawableEnd="@drawable/ic_chevron_right"
                        android:drawableRight="@drawable/ic_chevron_right"
                        android:drawablePadding="6dp"/>



                </RelativeLayout>




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">



                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/gray"/>



                    <TextView
                        android:id="@+id/view_all_transaction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:layout_marginTop="10dp"
                        android:text="@string/see_all_transactions"
                        android:layout_gravity="end"
                        android:layout_marginEnd="15dp"
                        android:drawableEnd="@drawable/ic_chevron_right"
                        android:drawableRight="@drawable/ic_chevron_right"
                        android:drawablePadding="6dp"
                        android:layout_marginRight="15dp" />



                </LinearLayout>



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <LinearLayout
                        android:id="@+id/content_last_transaction"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical" />



                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="30dp">


                        <include layout="@layout/content_recycler"/>


                    </ScrollView>



                </RelativeLayout>




            </LinearLayout>




        </LinearLayout>




        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingAdd"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="15dp"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="15dp" />





    </RelativeLayout>







    <ProgressBar
        android:visibility="visible"
        android:id="@+id/scroll_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>





</RelativeLayout>